--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -223,9 +223,9 @@ jobs:
         shell: bash # cspell:ignore elif
         run: |
           branch=${GITHUB_REF#refs/heads/}
-          echo "DO_HOST=$(if [ $branch = 'staging' ]; then echo 'DO_STAGING_HOST'; else echo 'DO_PRODUCTION_HOST'; fi)" >> $GITHUB_ENV
-          echo "DO_USERNAME=$(if [ $branch = 'staging' ]; then echo 'DO_STAGING_USERNAME'; else echo 'DO_PRODUCTION_USERNAME'; fi)" >> $GITHUB_ENV
-          echo "DO_KEY=$(if [ $branch = 'staging' ]; then echo 'DO_STAGING_KEY'; else echo 'DO_PRODUCTION_KEY'; fi)" >> $GITHUB_ENV
+          echo "DO_HOST=$(if [ $branch = 'staging' ]; then echo 'DO_HOST_STAGING'; else echo 'DO_HOST_PRODUCTION'; fi)" >> $GITHUB_ENV
+          echo "DO_USERNAME=$(if [ $branch = 'staging' ]; then echo 'DO_USERNAME_STAGING'; else echo 'DO_USERNAME_PRODUCTION'; fi)" >> $GITHUB_ENV
+          echo "DO_KEY=$(if [ $branch = 'staging' ]; then echo 'DO_KEY_STAGING'; else echo 'DO_KEY_PRODUCTION'; fi)" >> $GITHUB_ENV
           echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
 
       # Get Package.json Version
