--- a/.releaserc.json
+++ b/.releaserc.json
@@ -4,7 +4,7 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     ["@semantic-release/changelog", { "changelogFile": "CHANGELOG.md" }],
-    ["@semantic-release/exec", { "prepareCmd": "prettier . --write" }],
+    ["@semantic-release/exec", { "prepareCmd": "npx prettier . --write" }],
     ["@semantic-release/npm", { "npmPublish": false }],
     [
       "@semantic-release/git",
