--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,6 +70,17 @@ jobs:
           git pull origin staging
           git push
 
+      # Get Package.json Version
+      - name: Get Package.json Version
+        id: package3
+        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
+
+      # Extract Environments
+      - name: Test
+        shell: bash # cspell:ignore elif
+        run: |
+          echo ${{ steps.package3.outputs.current-version }}
+
       # Checkout
       - name: Checkout
         uses: actions/checkout@v3
@@ -86,6 +97,43 @@ jobs:
         shell: bash # cspell:ignore elif
         run: |
           echo ${{ steps.package.outputs.current-version }}
+
+  # Publish New Release To Sentry
+  test2:
+    runs-on: ubuntu-latest
+    needs: semantic-release
+    steps:
+      # Get checkout
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      # Get Package.json Version
+      - name: Get Package.json Version
+        id: package
+        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
+
+      # Extract Environments
+      - name: Test
+        shell: bash # cspell:ignore elif
+        run: |
+          echo ${{ steps.package.outputs.current-version }}
+
+      - name: Pull From origin
+        run: |
+          git pull origin
+
+      # Get Package.json Version
+      - name: Get Package.json Version
+        id: package3
+        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
+
+      # Extract Environments
+      - name: Test
+        shell: bash # cspell:ignore elif
+        run: |
+          echo ${{ steps.package3.outputs.current-version }}
 
   # # Publish New Release To Sentry
   # sentry:
