--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,27 +38,6 @@ jobs:
           GIT_COMMITTER_EMAIL: github-actions@github.com
 
       # Checkout Develop
-      - name: push changes
-        run: |
-          date > generated.txt
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add CHANGELOG.md package.json
-          git commit -m "docs(release): new release has been generated [skip ci]"
-          git push
-
-      # Get Package.json Version
-      - name: Get Package.json Version
-        id: package2
-        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
-
-      # Extract Environments
-      - name: Test
-        shell: bash # cspell:ignore elif
-        run: |
-          echo ${{ steps.package2.outputs.current-version }}
-
-      # Checkout Develop
       - name: Checkout Develop
         uses: actions/checkout@v3
         with:
@@ -70,36 +49,8 @@ jobs:
           git pull origin staging
           git push
 
-      # Get Package.json Version
-      - name: Get Package.json Version
-        id: package3
-        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
-
-      # Extract Environments
-      - name: Test
-        shell: bash # cspell:ignore elif
-        run: |
-          echo ${{ steps.package3.outputs.current-version }}
-
-      # Checkout
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      # Get Package.json Version
-      - name: Get Package.json Version
-        id: package
-        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
-
-      # Extract Environments
-      - name: Test
-        shell: bash # cspell:ignore elif
-        run: |
-          echo ${{ steps.package.outputs.current-version }}
-
   # Publish New Release To Sentry
-  test2:
+  sentry:
     runs-on: ubuntu-latest
     needs: semantic-release
     steps:
@@ -109,235 +60,203 @@ jobs:
         with:
           fetch-depth: 0
 
+      # Double Check The Latest Commit Pulled
+      - name: Pull From origin
+        run: |
+          git pull origin
+
+      # Extract Environments
+      - name: Extract environments
+        shell: bash # cspell:ignore elif
+        run: |
+          branch=${GITHUB_REF#refs/heads/}
+          echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
+
+      # Install Node js
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.10.0'
+
+      # Install Dependencies
+      - name: Install dependencies 🔧
+        run: |
+          npm i -g npm@latest
+          npm ci
+
+      # Build application
+      - name: Run Build
+        run: npm run build -- --source-map
+
       # Get Package.json Version
       - name: Get Package.json Version
         id: package
         uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
 
+      # Create Sentry Release For Web Admin
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: nitro-system
+          SENTRY_PROJECT: web-admin
+        with:
+          environment: ${{ env.env }}
+          sourcemaps: ./dist/apps/w-admin
+          version: ${{ steps.package.outputs.current-version }}
+          ignore_empty: true
+
+      # Create Sentry Release For Mobile Admin
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: nitro-system
+          SENTRY_PROJECT: mobile-admin
+        with:
+          environment: ${{ env.env }}
+          sourcemaps: ./dist/apps/m-admin
+          version: ${{ steps.package.outputs.current-version }}
+          ignore_empty: true
+
+      # Create Sentry Release For Backend Api
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: nitro-system
+          SENTRY_PROJECT: backend-api
+        with:
+          environment: ${{ env.env }}
+          sourcemaps: ./dist/apps/b-api
+          version: ${{ steps.package.outputs.current-version }}
+          ignore_empty: true
+
+  # Build and push images to docker hub
+  docker:
+    runs-on: ubuntu-latest
+    needs: semantic-release
+    steps:
+      # Get checkout
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       # Extract Environments
-      - name: Test
+      - name: Extract environments
         shell: bash # cspell:ignore elif
         run: |
-          echo ${{ steps.package.outputs.current-version }}
-
-      - name: Pull From origin
-        run: |
-          git pull origin
+          branch=${GITHUB_REF#refs/heads/}
+          echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
 
       # Get Package.json Version
       - name: Get Package.json Version
-        id: package3
+        id: package
         uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
 
+      # Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      # Login to DockerHub
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      # Build and push Build
+      - name: Build and push Build
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: nitrosystem/build:${{ steps.package.outputs.current-version }}-${{ env.env }}
+          target: dist
+          build-args: |
+            stage=${{ env.env }}
+
+      # Build and push Backend Api
+      - name: Build and push Backend Api
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: nitrosystem/b_api:${{ steps.package.outputs.current-version }}-${{ env.env }}
+          target: backend
+          build-args: |
+            app=b-api
+            stage=${{ env.env }}
+            version=${{ steps.package.outputs.current-version }}
+
+      # Build and push Admin Web
+      - name: Build and push Admin Web
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: nitrosystem/w_admin:${{ steps.package.outputs.current-version }}-${{ env.env }}
+          target: frontend
+          build-args: |
+            app=w-admin
+            stage=${{ env.env }}
+            version=${{ steps.package.outputs.current-version }}
+
+      # Build and push Admin Mobile
+      - name: Build and push Admin Mobile
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: nitrosystem/m_admin:${{ steps.package.outputs.current-version }}-${{ env.env }}
+          target: frontend
+          build-args: |
+            app=m-admin
+            stage=${{ env.env }}
+            version=${{ steps.package.outputs.current-version }}
+
+  # Deploy shell and docker-compose files and run docker compose in digital ocean
+  deploy:
+    runs-on: ubuntu-latest
+    needs: docker
+    steps:
+      # Get checkout
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       # Extract Environments
-      - name: Test
+      - name: Extract environments
         shell: bash # cspell:ignore elif
         run: |
-          echo ${{ steps.package3.outputs.current-version }}
+          branch=${GITHUB_REF#refs/heads/}
+          echo "DO_HOST=$(if [ $branch = 'staging' ]; then echo 'DO_HOST_STAGING'; else echo 'DO_HOST_PRODUCTION'; fi)" >> $GITHUB_ENV
+          echo "DO_USERNAME=$(if [ $branch = 'staging' ]; then echo 'DO_USERNAME_STAGING'; else echo 'DO_USERNAME_PRODUCTION'; fi)" >> $GITHUB_ENV
+          echo "DO_KEY=$(if [ $branch = 'staging' ]; then echo 'DO_KEY_STAGING'; else echo 'DO_KEY_PRODUCTION'; fi)" >> $GITHUB_ENV
+          echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
 
-  # # Publish New Release To Sentry
-  # sentry:
-  #   runs-on: ubuntu-latest
-  #   needs: semantic-release
-  #   steps:
-  #     # Get checkout
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
+      # Get Package.json Version
+      - name: Get Package.json Version
+        id: package
+        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
 
-  #     # Extract Environments
-  #     - name: Extract environments
-  #       shell: bash # cspell:ignore elif
-  #       run: |
-  #         branch=${GITHUB_REF#refs/heads/}
-  #         echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
+      # Copy shell files to the server
+      - name: Copy shell files to the server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets[env.DO_HOST] }}
+          username: ${{ secrets[env.DO_USERNAME] }}
+          key: ${{ secrets[env.DO_KEY] }}
+          source: 'deploy.sh,docker-compose.yml'
+          rm: true
+          target: 'nitro'
 
-  #     # Install Node js
-  #     - name: Use Node.js
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: '16.10.0'
-
-  #     # Install Dependencies
-  #     - name: Install dependencies 🔧
-  #       run: |
-  #         npm i -g npm@latest
-  #         npm ci
-
-  #     # Build application
-  #     - name: Run Build
-  #       run: npm run build -- --source-map
-
-  #     # Get Package.json Version
-  #     - name: Get Package.json Version
-  #       id: package
-  #       uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
-
-  #     # Create Sentry Release For Web Admin
-  #     - name: Create Sentry release
-  #       uses: getsentry/action-release@v1
-  #       env:
-  #         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-  #         SENTRY_ORG: nitro-system
-  #         SENTRY_PROJECT: web-admin
-  #       with:
-  #         environment: ${{ env.env }}
-  #         sourcemaps: ./dist/apps/w-admin
-  #         version: ${{ steps.package.outputs.current-version }}
-  #         ignore_empty: true
-
-  #     # Create Sentry Release For Mobile Admin
-  #     - name: Create Sentry release
-  #       uses: getsentry/action-release@v1
-  #       env:
-  #         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-  #         SENTRY_ORG: nitro-system
-  #         SENTRY_PROJECT: mobile-admin
-  #       with:
-  #         environment: ${{ env.env }}
-  #         sourcemaps: ./dist/apps/m-admin
-  #         version: ${{ steps.package.outputs.current-version }}
-  #         ignore_empty: true
-
-  #     # Create Sentry Release For Backend Api
-  #     - name: Create Sentry release
-  #       uses: getsentry/action-release@v1
-  #       env:
-  #         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-  #         SENTRY_ORG: nitro-system
-  #         SENTRY_PROJECT: backend-api
-  #       with:
-  #         environment: ${{ env.env }}
-  #         sourcemaps: ./dist/apps/b-api
-  #         version: ${{ steps.package.outputs.current-version }}
-  #         ignore_empty: true
-
-  # # Build and push images to docker hub
-  # docker:
-  #   runs-on: ubuntu-latest
-  #   needs: semantic-release
-  #   steps:
-  #     # Get checkout
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
-
-  #     # Extract Environments
-  #     - name: Extract environments
-  #       shell: bash # cspell:ignore elif
-  #       run: |
-  #         branch=${GITHUB_REF#refs/heads/}
-  #         echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
-
-  #     # Get Package.json Version
-  #     - name: Get Package.json Version
-  #       id: package
-  #       uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
-
-  #     # Set up Docker Buildx
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v2
-
-  #     # Login to DockerHub
-  #     - name: Login to DockerHub
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKER_HUB_USERNAME }}
-  #         password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-  #     # Build and push Build
-  #     - name: Build and push Build
-  #       uses: docker/build-push-action@v3
-  #       with:
-  #         push: true
-  #         tags: nitrosystem/build:${{ steps.package.outputs.current-version }}-${{ env.env }}
-  #         target: dist
-  #         build-args: |
-  #           stage=${{ env.env }}
-
-  #     # Build and push Backend Api
-  #     - name: Build and push Backend Api
-  #       uses: docker/build-push-action@v3
-  #       with:
-  #         push: true
-  #         tags: nitrosystem/b_api:${{ steps.package.outputs.current-version }}-${{ env.env }}
-  #         target: backend
-  #         build-args: |
-  #           app=b-api
-  #           stage=${{ env.env }}
-  #           version=${{ steps.package.outputs.current-version }}
-
-  #     # Build and push Admin Web
-  #     - name: Build and push Admin Web
-  #       uses: docker/build-push-action@v3
-  #       with:
-  #         push: true
-  #         tags: nitrosystem/w_admin:${{ steps.package.outputs.current-version }}-${{ env.env }}
-  #         target: frontend
-  #         build-args: |
-  #           app=w-admin
-  #           stage=${{ env.env }}
-  #           version=${{ steps.package.outputs.current-version }}
-
-  #     # Build and push Admin Mobile
-  #     - name: Build and push Admin Mobile
-  #       uses: docker/build-push-action@v3
-  #       with:
-  #         push: true
-  #         tags: nitrosystem/m_admin:${{ steps.package.outputs.current-version }}-${{ env.env }}
-  #         target: frontend
-  #         build-args: |
-  #           app=m-admin
-  #           stage=${{ env.env }}
-  #           version=${{ steps.package.outputs.current-version }}
-
-  # # Deploy shell and docker-compose files and run docker compose in digital ocean
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: docker
-  #   steps:
-  #     # Get checkout
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 0
-
-  #     # Extract Environments
-  #     - name: Extract environments
-  #       shell: bash # cspell:ignore elif
-  #       run: |
-  #         branch=${GITHUB_REF#refs/heads/}
-  #         echo "DO_HOST=$(if [ $branch = 'staging' ]; then echo 'DO_HOST_STAGING'; else echo 'DO_HOST_PRODUCTION'; fi)" >> $GITHUB_ENV
-  #         echo "DO_USERNAME=$(if [ $branch = 'staging' ]; then echo 'DO_USERNAME_STAGING'; else echo 'DO_USERNAME_PRODUCTION'; fi)" >> $GITHUB_ENV
-  #         echo "DO_KEY=$(if [ $branch = 'staging' ]; then echo 'DO_KEY_STAGING'; else echo 'DO_KEY_PRODUCTION'; fi)" >> $GITHUB_ENV
-  #         echo "env=$(if [ $branch = 'staging' ]; then echo 'staging'; else echo 'production'; fi)" >> $GITHUB_ENV
-
-  #     # Get Package.json Version
-  #     - name: Get Package.json Version
-  #       id: package
-  #       uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
-
-  #     # Copy shell files to the server
-  #     - name: Copy shell files to the server
-  #       uses: appleboy/scp-action@master
-  #       with:
-  #         host: ${{ secrets[env.DO_HOST] }}
-  #         username: ${{ secrets[env.DO_USERNAME] }}
-  #         key: ${{ secrets[env.DO_KEY] }}
-  #         source: 'deploy.sh,docker-compose.yml'
-  #         rm: true
-  #         target: 'nitro'
-
-  #     # Run docker compose with shell file
-  #     - name: Run docker compose with shell file
-  #       uses: appleboy/ssh-action@master # cspell:ignore appleboy
-  #       with:
-  #         host: ${{ secrets[env.DO_HOST] }}
-  #         username: ${{ secrets[env.DO_USERNAME] }}
-  #         key: ${{ secrets[env.DO_KEY] }}
-  #         timeout: '900000s'
-  #         script: |
-  #           cd ./nitro
-  #           ./deploy.sh ${{ steps.package.outputs.current-version }} ${{ env.env }}
+      # Run docker compose with shell file
+      - name: Run docker compose with shell file
+        uses: appleboy/ssh-action@master # cspell:ignore appleboy
+        with:
+          host: ${{ secrets[env.DO_HOST] }}
+          username: ${{ secrets[env.DO_USERNAME] }}
+          key: ${{ secrets[env.DO_KEY] }}
+          timeout: '900000s'
+          script: |
+            cd ./nitro
+            ./deploy.sh ${{ steps.package.outputs.current-version }} ${{ env.env }}
